# Morfeusz

./: CMakeLists.txt  CPackConfig.txt  License.txt  README  buildAll.sh  buildDarwin.sh  cmake-2.8.12.1-patch.diff  createBinDeb.sh  createDeb.sh  createDevDeb.sh  createDictionaryDeb.sh  createGuiDeb.sh  createJavaDeb.sh  createLibraryDeb.sh  deploy.sh  doTest.sh  extractTags.sh  initializeAnalyzerTest.sh  initializeGeneratorTest.sh  profile.sh  test-darwin.sh  testJavaWrapper.sh  testPythonWrapper.sh
doc/: fileFormat.odt
fsabuilder/: CMakeLists.txt  buildanalyzer.sh  buildfsa.spec  buildgenerator.sh  morfeusz_builder  setup.py.in
fsabuilder/morfeuszbuilder/fsa/: common.py  convertinput.py  encode.py  fsa.py  register.py  serializer.py  state.py  visualizer.py
fsabuilder/morfeuszbuilder/fsa/test/: PoliMorfSmall.tab  testConstruction.py
fsabuilder/morfeuszbuilder/segrules/: preprocessor.py  pyparseString.py  rules.py  rulesFSA.py  rulesManager.py  rulesNFA.py  rulesParser.py  separatorChars.py  shiftOrthMagic.py  test.py
fsabuilder/morfeuszbuilder/segrules/test/: parserTest.py  polimorf.tagset  preprocessorTest.py
fsabuilder/morfeuszbuilder/tagset/: segtypes.py  tagset.py
fsabuilder/morfeuszbuilder/utils/: configFile.py  exceptions.py  extractTagset.py  limits.py  serializationUtils.py
fsabuilder/morfeuszbuilder/utils/caseconv/: CaseFolding.txt  generate.py
input/: PoliMorfSmall.tab  dodatki.tab  empty.txt  morfeusz-sgjp.tagset
morfeusz/: CMakeLists.txt  ChunkBounds.hpp  DictionariesRepository.cpp  DictionariesRepository.hpp  Dictionary.cpp  Dictionary.hpp  Environment.cpp  Environment.hpp  IdResolverImpl.cpp  IdResolverImpl.hpp  InflexionGraph.cpp  InflexionGraph.hpp  InterpretedChunk.hpp  InterpsGroup.hpp  Morfeusz.cpp  MorfeuszImpl.cpp  MorfeuszImpl.hpp  MorfeuszOptions.hpp  MorphInterpretation.cpp  ResultsIteratorImpl.cpp  ResultsIteratorImpl.hpp  const.cpp  const.hpp  morfeusz2.h  morfeusz2_c.cpp  morfeusz_analyzer.cpp  morfeusz_analyzer_old.cpp  morfeusz_generator.cpp  test_runner.cpp  utils.hpp
morfeusz/c_api/: ResultsManager.cpp  ResultsManager.hpp
morfeusz/case/: CaseConverter.cpp  CaseConverter.hpp  CasePatternHelper.cpp  CasePatternHelper.hpp  caseconv.cpp  caseconv.hpp
morfeusz/charset/: CharsetConverter.cpp  CharsetConverter.hpp  TextReader.cpp  TextReader.hpp  charset_utils.hpp  conversion_tables.cpp  conversion_tables.hpp  utf8sqlite.hpp
morfeusz/charset/utf8/: checked.h  core.h
morfeusz/cli/: cli.cpp  cli.hpp  ezOptionParser.hpp  outputUtils.hpp
morfeusz/data/: default_fsa.hpp
morfeusz/deserialization/: InterpsGroupsReader.cpp  InterpsGroupsReader.hpp  MorphDeserializer.cpp  MorphDeserializer.hpp  deserializationUtils.hpp  endianness.hpp
morfeusz/deserialization/morphInterps/: EncodedInterpretation.hpp  InterpretedChunksDecoder.cpp  InterpretedChunksDecoder.hpp  InterpretedChunksDecoder4Analyzer.cpp  InterpretedChunksDecoder4Analyzer.hpp  InterpretedChunksDecoder4Generator.cpp  InterpretedChunksDecoder4Generator.hpp  compressionByteUtils.hpp
morfeusz/fsa/: cfsa1_impl.hpp  cfsa2_impl.hpp  const.cpp  const.hpp  fsa.hpp  fsa_impl.hpp  simplefsa_impl.hpp  state_impl.hpp
morfeusz/segrules/: SegrulesFSA.cpp  SegrulesFSA.hpp  segrules.cpp  segrules.hpp
morfeusz/tests/: TestCAPI.cpp  TestCAPI.hpp  TestMorfeusz.cpp  TestMorfeusz.hpp
morfeusz/wrappers/: CMakeLists.txt  compile_swig.sh  morfeusz.i  morfeusz_common.i  morfeusz_java.i  morfeusz_javadoc.i  morfeusz_perl.i  morfeusz_python.i  morfeusz_python3.i  morfeuszpy2.i  morfeuszpy3.i
morfeusz/wrappers/java/: CMakeLists.txt  JMorfeuszTest.java  README
morfeusz/wrappers/java/pl/sgjp/morfeusz/: MorphInterpretation.java  ResultsIterator.java
morfeusz/wrappers/java/pl/sgjp/morfeusz/app/: App.java  MorfeuszUtils.java
morfeusz/wrappers/java/pl/waw/ipipan/morfeusz/app/: App.java  MorfeuszUtils.java
morfeusz/wrappers/perl/: CMakeLists.txt
morfeusz/wrappers/python/: CMakeLists.txt  setup.py.in  test.py
morfeusz/wrappers/python2/: CMakeLists.txt  setup.py.in
morfeusz/wrappers/python2/morfeusz2-0.4.0-py2.7/EGG-INFO/: PKG-INFO
morfeusz/wrappers/python3/: CMakeLists.txt  setup.py.in  test3.py
morfeusz/wrappers/python3/morfeusz2-0.4.0-py3.6/EGG-INFO/: native_libs.txt  top_level.txt
nbproject/: configurations.xml  project.xml
tests/analyzer/test_copyright/: output.txt
tests/analyzer/test_dict_copyright/: ARGS  dictionary.tab  output.txt
tests/analyzer/test_digits/: input.txt  output.txt
tests/analyzer/test_digits_roman/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_inflection_graph_numbers/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_mixed_case/: ARGS  dictionary.tab  input.txt  output.txt
tests/analyzer/test_multisegments/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_names/: dictionary.tab  output.txt
tests/analyzer/test_prefixes_with_uppercase_at_the_beginning/: ARGS  dictionary.tab  input.txt  output.txt
tests/analyzer/test_prefixes_with_uppercase_in_the_middle/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_qualifiers/: dictionary.tab  output.txt
tests/analyzer/test_segtypes/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_segtypes_with_homonyms/: dictionary.tab  input.txt  output.txt
tests/analyzer/test_whitespace_handling_append/: ARGS  dictionary.tab  input.txt  output.txt
tests/generator/test_additional_atomic_segments/: dictionary.tab  input.txt  output.txt
tests/generator/test_digits/: dictionary.tab  output.txt
tests/generator/test_names/: input.txt  output.txt
tests/generator/test_qualifiers/: ARGS  output.txt
tests/generator/test_segtypes/: output.txt
toolchains/: Toolchain-Darwin-amd64.cmake  Toolchain-Linux-amd64.cmake  Toolchain-Linux-i386.cmake  Toolchain-Linux-native.cmake  Toolchain-Windows-amd64.cmake  Toolchain-Windows-i386.cmake
